fix: resolved spacing issues and font-sizes

--- a/home/style.scss
+++ b/home/style.scss
@@ -6,16 +6,28 @@
 }
 @mixin grid($value) {
   display: grid;
-  -ms-grid-columns: (minmax(25rem, 1fr)) [auto-fit];
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-  gap: 0.5rem;
-  background: linear-gradient(183.41deg, #67c3f3 -8.57%, #5a98f2 82.96%);
+  grid-template-columns: auto auto auto auto;
+  gap: 145px;
 }
+h2 {
+  font-size: 36px;
+  font-weight: 700;
+}
+h3 {
+  font-size: 22px;
+  font-weight: 700;
+}
+
+body {
+  margin: 0px;
+  padding: 0px;
+}
+
 .page-header {
   display: flex;
   background: #ffffff;
   -ms-flex-pack: justify;
-  padding: 1rem 3%;
+  padding: 62px 0px;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -47,7 +59,7 @@
   display: flex;
   flex-direction: row;
   align-content: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
 
   .illustration {
     flex: 0 1 36rem;
@@ -62,45 +74,43 @@
   }
   .description-title {
     font-size: 48px;
-    color: $black;
+    color: #000000;
     margin: 0%;
+    padding-bottom: 25px;
   }
-  .description-content {
-    font-size: 18px;
-    color: #7d7987;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    line-height: 32px;
-  }
+}
+.description-content {
+  font-size: 18px;
+  color: #7d7987;
+  padding-bottom: 48px;
+  line-height: 32px;
 
   hr {
     float: left;
     width: 10%;
     margin: unset;
   }
-
-  // .consult {
-  //   padding: 1.3em;
-  //   border-radius: 55px;
-  //   background-color: $blue;
-  //   color: $white;
-  //   cursor: pointer;
-
-  //   &:hover {
-  //     color: $blue;
-  //     background-color: $white;
-  //     border: 1px solid $blue;
-  //   }
-  // }
 }
 
 .services {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 4rem 19%;
+
   .services-description {
     color: #7d7987;
+    font-size: 16px;
+    line-height: 28px;
+    font-weight: 300;
+  }
+  .services-descriptions {
+    color: #7d7987;
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: 300;
+    padding-left: 200px;
+    padding-right: 200px;
+    text-align: center;
   }
 }
 hr {
@@ -114,15 +124,33 @@ hr {
   flex: 1;
   padding: 1rem 5rem;
   margin: 0;
-
+  gap: 45px;
+  a {
+    color: $blue;
+  }
   .card {
-    transition: 0.3s;
-    width: 25%;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
     box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
     border-radius: 20px;
-    padding: 2rem 1.5rem;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+
+    img {
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+    }
+  }
+  .card-service {
+    box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 33px;
+
+    .card-container {
+      padding: 0px;
+    }
   }
   .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -130,7 +158,7 @@ hr {
   .card-container {
     flex-direction: column;
     flex-wrap: wrap;
-    padding: 0.5rem 0;
+    padding: 33px;
     display: flex;
   }
   .container {
@@ -147,10 +175,10 @@ hr {
   .consult {
     margin: auto;
     display: flex;
+    border: 1px solid #458ff6;
   }
 }
 .our-services {
-  margin: 0;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -159,6 +187,7 @@ hr {
   .line-break {
     float: left;
   }
+
   .services-button {
     padding: 4rem;
   }
@@ -181,43 +210,50 @@ hr {
     hr {
       border: 1px solid $white;
     }
-    .flex-box {
+    .info {
+      padding: 20px;
       display: flex;
-      -ms-flex-direction: row;
-      flex-direction: row;
-      gap: 2%;
-      h2 {
-        text-align: center;
-      }
-      .flex-item {
-        display: flex;
-        align-items: center;
-        line-height: 0;
-      }
-      .reviews-description {
-        font-size: 19px;
-        line-height: 30px;
-        text-align: left;
-        margin-left: 23%;
-        display: flex;
-        padding-left: 20%;
-        padding-right: 25%;
-      }
+      flex-direction: column;
+      justify-content: center;
+      line-height: 5px;
     }
   }
+  .flex-box {
+    display: flex;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    gap: 2%;
+    h2 {
+      text-align: center;
+    }
+    .flex-item {
+      display: flex;
+      flex: 1;
+      padding: 20px;
+    }
+  }
+  .reviews-description {
+    font-size: 19px;
+    font-weight: 300;
+    line-height: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 20px;
+    text-align: left;
+  }
 }
+
 .footer {
   margin: unset;
-
+  background: linear-gradient(183.41deg, #67c3f3 -8.57%, #5a98f2 82.96%);
+  padding: 120px 0px;
   .box-container {
     @include grid(25rem);
-    background: linear-gradient(183.41deg, #67c3f3 -8.57%, #5a98f2 82.96%);
-    width: 1600px;
-    margin: -8px;
-    padding: 2rem 9%;
+    // padding: 2rem 9%;
     align-content: space-around;
     .box {
-      padding: 2rem 9%;
+      // padding: 2rem 9%;
       display: flex;
       flex-direction: column;
       flex-wrap: wrap;
@@ -233,18 +269,15 @@ hr {
       }
       h3 {
         font-size: 20px;
-        color: $white;
+        color: #ffffff;
+        font-weight: 700;
       }
       a {
         display: block;
         font-size: 18px;
-        color: $white;
-        padding: 0.5rem 0;
-
-        i {
-          padding-right: 0.5rem;
-          color: $white;
-        }
+        color: #ffffff;
+        line-height: 38px;
+        font-weight: 300;
 
         &:hover {
           color: $white;
